<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar_text">Netology. University of online profesions</string>
    <string name="avatar_date">may 21 06:36 am</string>
    <string name="postText" translatable="false">Привет, это новая Нетология!\nКогда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов.\nНо самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен →</string>
    <string name="netologyLink" textcolor="3914AF" translatable="false">http://netology.gy/fyb</string>
    <string name="countOfLikes" translatable="false">0</string>
    <string name="countOfshares" translatable="false">0</string>
    <string name="countOfViews" translatable="false">0</string>
    <string name="error_empty_content">коннтент не может быть пустым</string>
    <string name="empty_content" translatable="false">пост удалился т.к. вы стерли контент</string>
    <string name="post_text">Текст поста</string>
    <string name="menu_remove">Удалить</string>
    <string name="menu_edit">Изменить</string>
    <string name="description_post_save">Сохранить</string>
    <string name="description_post_share">Поделиться</string>
    <string name="description_post_like">Нравится</string>
    <string name="description_post_menu">Меню поста</string>
    <string name="description_post_author_avatar">Аватар автора поста</string>
    <string name="hello">Привет, Мир!</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="add_post" translatable="false">Add post</string>
    <string name="description_post_cancel" translatable="false">Отмена редактирования</string>
    <string name="youtube_video" translatable="false">Youtube_video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>